--- a/eph/Makefile
+++ b/eph/Makefile
@@ -22,7 +22,7 @@
 # CC	= gcc
 # CC	= armv6-gcc
 # CC	=	/usr/bin/arm-linux-gnueabi-gcc
-CC	= /usr/bin/arm-linux-gnueabihf-gcc
+#CC	= /usr/bin/arm-linux-gnueabihf-gcc
 #CC  = /usr/bin/aarch64-linux-gnu-gcc
 #--------------------------------------------------------------------------------------
 
