--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.exclude": {
         "**/*.o": true
     },
-    "editor.hover.enabled": false
+    "editor.hover.enabled": false,
+    "files.associations": {
+        "astro.h": "c"
+    }
 }
