ajout fonctionnalites TERMIOS et NCURSES dans keyboard.c

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -4,6 +4,7 @@
     },
     "editor.hover.enabled": false,
     "files.associations": {
-        "astro.h": "c"
+        "astro.h": "c",
+        "ncurses.h": "c"
     }
 }
