(ok) work on lcd display and config_lcd fcts + Makefile M=targ/host

--- a/lcd/demo/matrix-i2c_lcd1602/Makefile
+++ b/lcd/demo/matrix-i2c_lcd1602/Makefile
@@ -1,5 +1,5 @@
-# CC = gcc 
-CC = arm-linux-gnueabihf-gcc 
+CC = gcc 
+#CC = arm-linux-gnueabihf-gcc 
 
 TARGET	=  $(patsubst Matrix-%.c,matrix-%, $(wildcard *.c))
 SRC 	=  $(wildcard *.c)
