--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -36,9 +36,9 @@
 #--------------------------------------------------------------
 
 MENU_PAR_DEFAUT  MENU_AZIMUTAL
-ASTRE_PAR_DEFAUT NGC6756
+ASTRE_PAR_DEFAUT PLA0
 LED_ETAT_GPIOS   4
-TEMPO            0
+TEMPO            300000
 
 # ----------------------- parametres repertoires et fichiers
 
@@ -55,7 +55,7 @@ CONFIG_FIC_LOG       astrokit.log.new
 CONFIG_FIC_DATE      date.txt
 CONFIG_FIC_HHMM      hhmm.txt
 CONFIG_FIC_PID       pid.csv
-CONFIG_FIC_VOUTE     voute.csv
+CONFIG_FIC_VOUY       vou.csv
 
 # ----------------------- parametres temporisation
 # tempo_menu     doit etre legerement inferieur aux autres tempo
@@ -82,7 +82,7 @@ PID_KD  0.05
 
 # ----------------------- parametres acquisitions
 
-DEVICE_USE_INFRAROUGE       1  # flag qui indique utilisation de infrarouge comme source input
+DEVICE_USE_INFRAROUGE       0  # flag qui indique utilisation de infrarouge comme source input
 DEVICE_USE_KEYBOARD         1  # flag qui indique utilisation du clavier comme source input
 DEVICE_USE_LCD              0  # flag qui indique utilisation de ecran LCD1602 / PCA8574
 DEVICE_USE_CONTROLER        0  # flag qui indique utilisation des controleurs de moteur externes
