(ok) corrections deroulement termios + renommage keys s/n/e/o

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -38,10 +38,26 @@
 MENU_PAR_DEFAUT  MENU_AZIMUTAL
 ASTRE_PAR_DEFAUT PLA0
 LED_ETAT_GPIOS   4
-TEMPO            100000
+
+#--------------------------------------------------------------
+# tempo_menu     doit etre legerement inferieur aux autres tempo
+# tempo_raq      doit etre etre deux fois inferieur aux autres tempos
+# une valeur non nulle sur TEMPO permet de deduire toutes les autres temporisations par pourcentage
+# les valeurs de pourcentage sont dans le code
+#--------------------------------------------------------------
+
+#TEMPO           250000
+TEMPO_MENU      200000
+TEMPO_RAQ       120000
+TEMPO_IR        250010
+TEMPO_TERMIOS   250020
+TEMPO_CLAVIER   250030
+TEMPO_CAPTEURS  250040
+TEMPO_LCD_LOOP  100000
+TEMPO_LCD_DISP  25006
+TEMPO_PID_LOOP  5
 
 # ----------------------- parametres repertoires et fichiers
-
 CONFIG_REP_CAT       cat  
 CONFIG_REP_CFG       cfg 
 CONFIG_REP_LOG       log   
@@ -49,29 +65,12 @@ CONFIG_REP_IN        inp
 CONFIG_REP_OUT       out
 CONFIG_REP_SCR       scr
 CONFIG_SCR_KERNEL    script_kernel.sh
-
 CONFIG_FIC_LED       /tmp/astrokit-boo-recup-led-ir.txt
 CONFIG_FIC_LOG       astrokit.log.new
 CONFIG_FIC_DATE      date.txt
 CONFIG_FIC_HHMM      hhmm.txt
 CONFIG_FIC_PID       pid.csv
-CONFIG_FIC_VOUY       vou.csv
-
-# ----------------------- parametres temporisation
-# tempo_menu     doit etre legerement inferieur aux autres tempo
-# tempo_raq      doit etre etre deux fois inferieur aux autres tempos
-# une valeur non nulle sur TEMPO permet de deduire toutes les autres temporisations par pourcentage
-# les valeurs de pourcentage sont dans le code
-
-TEMPO_MENU      55000
-TEMPO_RAQ       12000
-TEMPO_IR        25001
-TEMPO_TERMIOS   25002
-TEMPO_CLAVIER   25003 
-TEMPO_CAPTEURS  25004
-TEMPO_LCD_LOOP  100000
-TEMPO_LCD_DISP  25006
-TEMPO_PID_LOOP  5
+CONFIG_FIC_VOUY      vou.csv
 
 # ----------------------- parametres regultaur de frequence pid
 
