(ok) evolution sur altaz.c / mydoobj / solar_system / ..

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -46,7 +46,7 @@ LED_ETAT_GPIOS   4
 # les valeurs de pourcentage sont dans le code
 #--------------------------------------------------------------
 
-#TEMPO           250000
+TEMPO           250000
 TEMPO_MENU      200000
 TEMPO_RAQ       120000
 TEMPO_IR        250010
@@ -91,9 +91,14 @@ DEVICE_USE_BLUETOOTH        0  # flag qui indique utilisation du bluetooth comme
 
 # ----------------------- parametres geographiques
 
-# Latitude et longitude Escout (64)
-# LATITUDE   43.28
-# LONGITUDE  -0.37
+# Latitude et longitude Pau (64)
+LATITUDE   43.28
+LONGITUDE  -0.37
+ALTITUDE   100
+
+# Latitude et longitude Oloron (64)
+# LATITUDE   43.18
+# LONGITUDE  -0.6
 # ALTITUDE   100
 
 # Latitude et longitude Orgeres (35)
@@ -106,9 +111,9 @@ DEVICE_USE_BLUETOOTH        0  # flag qui indique utilisation du bluetooth comme
 # LONGITUDE  -149.9
 # ALTITUDE   100
 
-LATITUDE   43.28
-LONGITUDE  -0.37
-ALTITUDE   100
+#LATITUDE   43.2
+#LONGITUDE  -0.55
+#ALTITUDE   100
 
 #---------------------------------------------------------------------------------
 # Conf corecte pour carte essai carre (celle qui s enfiche sur rpi3aplus)
