(wa) tests et finalisations sur appel SOLAR_SYSTEM pour ciel profond

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -36,7 +36,7 @@
 #--------------------------------------------------------------
 
 MENU_PAR_DEFAUT  MENU_AZIMUTAL
-ASTRE_PAR_DEFAUT PLA0
+ASTRE_PAR_DEFAUT NGC1395
 LED_ETAT_GPIOS   4
 
 #--------------------------------------------------------------
