(wa) modifs sleep avant while => dans PTHREADS_CONFIG + finalisation aff SOALR_SYSTEM dans calculs.C

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -36,7 +36,7 @@
 #--------------------------------------------------------------
 
 MENU_PAR_DEFAUT  MENU_AZIMUTAL
-ASTRE_PAR_DEFAUT NGC1395
+ASTRE_PAR_DEFAUT NGC7392
 LED_ETAT_GPIOS   4
 
 #--------------------------------------------------------------
@@ -45,6 +45,16 @@ LED_ETAT_GPIOS   4
 # une valeur non nulle sur TEMPO permet de deduire toutes les autres temporisations par pourcentage
 # les valeurs de pourcentage sont dans le code
 #--------------------------------------------------------------
+
+#define TIME_DEFAULT_TEMPO_VOUTE    1000000
+#define TIME_DEFAULT_TEMPO_NEMU     50000
+#define TIME_DEFAULT_TEMPO_RAQ      51000
+#define TIME_DEFAULT_TEMPO_IR       52000
+#define TIME_DEFAULT_TEMPO_TERMIOS  53000
+#define TIME_DEFAULT_TEMPO_CAPTEURS 54000
+#define TIME_DEFAULT_TEMPO_LCD_LOOP 250000
+#define TIME_DEFAULT_TEMPO_LCD_DISP 100000
+#define TIME_DEFAULT_TEMPO_PID_LOOP 100000
 
 TEMPO           250000
 TEMPO_MENU      200000
