(ok) tests en cours pour remise en production

--- a/astrokit.targ.cfg
+++ b/astrokit.targ.cfg
@@ -36,7 +36,7 @@
 #--------------------------------------------------------------
 
 MENU_PAR_DEFAUT  MENU_AZIMUTAL
-ASTRE_PAR_DEFAUT MES10
+ASTRE_PAR_DEFAUT  MES10
 LED_ETAT_GPIOS   4
 
 #--------------------------------------------------------------
@@ -56,8 +56,11 @@ LED_ETAT_GPIOS   4
 #define TIME_DEFAULT_TEMPO_LCD_DISP 100000
 #define TIME_DEFAULT_TEMPO_PID_LOOP 100000
 
-TEMPO           10000
+# si TEMPO est defini et non egal a zero 
+# la valeur des autres tempos est prises en dur par multiplication
+# directement dans le code (1.1, 1.2, 1.3, ... ) 
 
+TEMPO           10000
 TEMPO_MENU      200000
 TEMPO_RAQ       120000
 TEMPO_IR        250010
@@ -69,7 +72,6 @@ TEMPO_LCD_DISP  25006
 TEMPO_PID_LOOP  5
 
 # ----------------------- parametres repertoires et fichiers
-#
 CONFIG_REP_CAT       cat  
 CONFIG_REP_CFG       cfg 
 CONFIG_REP_LOG       log   
@@ -95,7 +97,7 @@ PID_KD  0.05
 
 DEVICE_USE_INFRAROUGE       1  # flag qui indique utilisation de infrarouge comme source input
 DEVICE_USE_KEYBOARD         1  # flag qui indique utilisation du clavier comme source input
-DEVICE_USE_LCD              0  # flag qui indique utilisation de ecran LCD1602 / PCA8574
+DEVICE_USE_LCD              1  # flag qui indique utilisation de ecran LCD1602 / PCA8574
 DEVICE_USE_CONTROLER        0  # flag qui indique utilisation des controleurs de moteur externes
 DEVICE_USE_CAPTEURS         0  # flag qui indique utilisation de capteurs comme source input
 DEVICE_USE_RAQUETTE         0  # flag qui indique utilisation d une raquette (gpio) comme source input
@@ -137,6 +139,7 @@ ALTITUDE   100
 # AZI_MASK     0,1,2,3
 #--------------------------------------------------------------------------
 # Masque corect pour carte essai carre (celle qui s enfiche sur rpi3aplus)
+# et moteurs vixen gp
 #--------------------------------------------------------------------------
 # ALT_GPIO     21,26,19,13
 # AZI_GPIO     6,5,7,11
@@ -153,16 +156,17 @@ ALTITUDE   100
 # ALT_GPIO  21,26,19,13  # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
 # ALT_MASK  3,1,0,2      # ordre (masque) de generation des signaux (4 phases, 2 bobines)
 
-ALT_GPIO  25,24,23,18  # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
-ALT_GPIO  21,26,19,13  # pour tests nema + carte old 
-ALT_MASK  0,3,1,2      # ordre (masque) de generation des signaux (4 phases, 2 bobines)
-ALT_MASK  0,1,2,3      # pour tests nema + carte old
-
+# ALT_GPIO  25,24,23,18  # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
+ALT_GPIO  21,26,19,13  # numeros des gpios pour generation des signaux (4 phases, 2 bobines) (ancienne carte)
+#ALT_GPIO  26,19,6,5    # ancienne carte rectangulaire avec bord abime et alim par bornier
+#ALT_MASK  0,3,1,2      # ordre (masque) de generation des signaux (4 phases, 2 bobines)
+ALT_MASK  0,1,2,3      # ordre (masque) de generation des signaux (4 phases, 2 bobines) correct NEMA + carte old rect
+#ALT_MASK  3,1,0,2     # ordre (masque) de generation des signaux (4 phases, 2 bobines) correct VIXEN GP + carte old
 ALT_FPWM  1000          # frequence pwm (doit etre au moins superieure a 10 fois la plus grande frequence micropas moteur)
 ALT_R1    144      # reduction liee a la monture (nombre de dents de la roue dentee de l axe)
 ALT_R2    64       # reducteur du moteur (nombre de pas) = 5760 (64*90) (32*180)
 ALT_R3    90       # reducteur du moteur (gearbox)       = 5760 (64*90) (32*180)
-ALT_R4    32       # mode micro pas utilise (1/x)
+ALT_R4    128      # mode micro pas utilise (1/x)
 ALT_R5    1        # reduction liee a la poulie
 ALT_R6    1        # reduction liee au cpu
 ALT_R7    1        # reduction non decrite plus haut ....
@@ -175,17 +179,18 @@ ALT_ACC   2        # Facteur de multiplication en mode MANUEL
 
 # AZI_GPIO  6,5,7,11     # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
 # AZI_MASK  3,1,0,2      # ordre (masque) de generation des signaux (4 phases, 2 bobines)
-
-AZI_GPIO  26,19,13,6     # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
-AZI_GPIO  6,5,7,11       # pour tests nema + carte old
-AZI_MASK  0,3,1,2       # ordre (masque) de generation des signaux (4 phases, 2 bobines)
-AZI_MASK  0,1,2,3       # pour tests nema + carte old
-
+# AZI_GPIO  26,19,13,6     # numeros des gpios pour generation des signaux (4 phases, 2 bobines)
+AZI_GPIO  6,5,7,11      
+#AZI_GPIO  11,9,10,22  # ancienne carte rectangualaire avec bord abime et alim par bornier       
+#AZI_MASK  0,3,1,2       # ordre (masque) de generation des signaux (4 phases, 2 bobines)
+AZI_MASK  0,1,2,3       # ordre (masque) de generation des signaux (4 phases, 2 bobines)
+#AZI_MASK  0,2,1,3       # ordre (masque) de generation des signaux (4 phases, 2 bobines)
 AZI_FPWM  1000          # frequence pwm (doit etre au moins superieure a 10 fois la plus grande frequence micropas moteur)
+#AZI_MASK  3,1,0,2       # ordre (masque) de generation des signaux (4 phases, 2 bobines)
 AZI_R1    144      # reduction lee a la monture (nombre de dents de la roue dentee de l axe)
 AZI_R2    64       # reducteur du moteur (nombre de pas) : R total = 5760 (64*90) (32*180)
 AZI_R3    90       # reducteur du moteur (gearbox) : R total = 5760 (64*90) (32*180)
-AZI_R4    32       # mode micro pas utilise (1/x)
+AZI_R4    128       # mode micro pas utilise (1/x)
 AZI_R5    1        # reduction liee a la poulie
 AZI_R6    1        # reduction liee au cpu
 AZI_R7    1        # reduction non decrite plus haut ....
