(ok) tests en cours pour remise en production (organisation traces)

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -56,7 +56,7 @@ LED_ETAT_GPIOS   4
 #define TIME_DEFAULT_TEMPO_LCD_DISP 100000
 #define TIME_DEFAULT_TEMPO_PID_LOOP 100000
 
-TEMPO           10000
+TEMPO           1000000
 
 TEMPO_MENU      200000
 TEMPO_RAQ       120000
