ajout parametrage DEVICE_USE_MOTOR_xxx

--- a/astrokit.cfg
+++ b/astrokit.cfg
@@ -101,6 +101,11 @@ DEVICE_USE_CAPTEURS         0  # flag qui indique utilisation de capteurs comme 
 DEVICE_USE_RAQUETTE         0  # flag qui indique utilisation d une raquette (gpio) comme source input
 DEVICE_USE_BLUETOOTH        0  # flag qui indique utilisation du bluetooth comme source input
 
+DEVICE_USE_MOTOR_ALT        1  # flag qui indique utilisation du moteur en altitude             (4 threads correspôndant)
+DEVICE_USE_MOTOR_AZI        1  # flag qui indique utilisation du moteur en azimut               (4 threads correspondant)  
+DEVICE_USE_MOTOR_ROT        1  # flag qui indique utilisation du moteur en derotation de champs (4 threads correspondant)
+
+
 # ----------------------- parametres geographiques
 
 # Latitude et longitude Pau (64)
